# wages-of-war

./: .gitignore  CLAUDE.md  README.md  handoff.md
crates/ow-app/: Cargo.toml
crates/ow-app/src/: avi_player.rs  game_loop.rs  main.rs
crates/ow-audio/: Cargo.toml
crates/ow-audio/src/: lib.rs  music.rs  sfx.rs  vla_parser.rs  voice.rs  wav_loader.rs
crates/ow-core/src/: combat.rs  config.rs  damage.rs  game_state.rs  lib.rs  los.rs  merc.rs  pathfinding.rs  ruleset.rs  save.rs  weather.rs
crates/ow-data/src/: lib.rs  map_loader.rs  palette.rs  sprite.rs  wri.rs
crates/ow-render/: Cargo.toml
crates/ow-render/src/: anim_controller.rs  hud.rs  iso_math.rs  lib.rs  palette.rs  pcx.rs  sprite_renderer.rs  text.rs  tile_renderer.rs  ui.rs  unit_renderer.rs  viewer.rs
crates/ow-tools/: Cargo.toml
docs/: BINARY_FORMATS_DEEP_RE.md  COR_ANIM_FORMAT.md  FORMAT_MAP.md  FORMAT_SPRITE.md  IS3_EXTRACTION.md  OXCE_ARCHITECTURE_NOTES.md  VLS_VLA_FORMAT.md  WOW_EXE_RE_ANALYSIS.md  WRI_FORMAT.md
