[package]
name = "ow-audio"
description = "Sound and music playback for Open Wages"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sdl2 = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
byteorder = { workspace = true }
