[package]
name = "ow-render"
description = "Isometric 2D renderer for Open Wages"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ow-core = { path = "../ow-core" }
ow-data = { path = "../ow-data" }
sdl2 = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Only needed by the sprite-viewer binary, but harmless as lib deps.
clap = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "sprite-viewer"
path = "src/bin/sprite_viewer.rs"
