[package]
name = "ow-tools"
description = "RE helper tools for Open Wages — file survey, triage, hex analysis"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
ow-data = { path = "../ow-data" }

[[bin]]
name = "survey"
path = "src/bin/survey.rs"

[[bin]]
name = "triage"
path = "src/bin/triage.rs"

[[bin]]
name = "validate-all"
path = "src/bin/validate_all.rs"
